2007-10-30  Atsushi Enomoto  <atsushi@ximian.com>

	* XslMessage.cs, XslText.cs, XslVariable.cs, XslNumber.cs,
	  XslElement.cs, XslIf.cs, XslFallback.cs, XslCopyOf.cs,
	  XslValueOf.cs, XslComment.cs, XslAttribute.cs, XslApplyImports.cs,
	  XslApplyTemplates.cs, XslForEach.cs, XslCallTemplate.cs,
	  XslCopy.cs, XslProcessingInstruction.cs, XslChoose.cs:
	  refactory on checking invalid attributes. Fixed bug #333806.

2007-08-08  Atsushi Enomoto  <atsushi@ximian.com>

	* XslCallTemplate.cs : significant whitespace should be allowed
	  as its content. Fixed bug #82357.

2007-06-28  Atsushi Enomoto  <atsushi@ximian.com>

	* XslText.cs XslMessage.cs XslVariable.cs XslNotSupportedOperation.cs
	  XslNumber.cs XslElement.cs XslIf.cs XslCopyOf.cs XslFallback.cs
	  XslValueOf.cs XslComment.cs XslAttribute.cs XslApplyImports.cs
	  XslApplyTemplates.cs XslLiteralElement.cs XslCompiledElement.cs
	  XslTemplateContent.cs XslForEach.cs XslCallTemplate.cs
	  XslCopy.cs XslProcessingInstruction.cs XslChoose.cs :
	  minimum required injection for debugger.

2007-01-09  Atsushi Enomoto  <atsushi@ximian.com>

	* XslMessage.cs : added MONO_XSLT_MESSAGE_OUTPUT environment
	  variable support to switch xsl:message output ('none' and 'stderr',
	  or stdout by default).

2005-04-07  Atsushi Enomoto  <atsushi@ximian.com>

	* XslForEach.cs : push current node context after iterating "selected"
	  node-set.

2005-03-15  Atsushi Enomoto  <atsushi@ximian.com>

	* XslApplyTemplates.cs, XslSort.cs : use new XslSortEvaluator.cs
	  instead of XPathExpression.AddSort() to handle XSLT current node
	  context correctly.

2005-12-23  Gert Driesen  <drieseng@users.sourceforge.net>

	* XslVariable.cs: Beautify error messages.
	* XslElement.cs: Same.
	* XslAvt.cs: Same.
	* XslAttribute.cs: Same.
	* XslApplyTemplates.cs: Same.
	* XslTemplateContent.cs: Same.
	* XslCallTemplate.cs: Same.
	* XslCopy.cs: Same.
	* XslChoose.cs: Same.

2005-03-15  Atsushi Enomoto  <atsushi@ximian.com>
